# homework_12_web

./: main.py
src/: pyproject.toml  schemas.py
src/database/: db.py  models.py
src/repository/: users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py
