[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["pawelzajac95 <pawelzajac34@wp.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = "^2.7.4"
shell = "^1.0.1"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
dependencies = "^7.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
